--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <meta property="og:type" content="website">
      <meta property="og:title" content="Avatar Finder">
      <meta property="og:description" content="A Avatar Finder Tool">
-     <meta property="og:image" content="https://ibb.co/Qcb9nRv" alt="profile-pic-1">
+     <meta property="og:image" content="https://i.ibb.co/59MTvyh/Screenshot-2021-09-19-234511.png" alt="profile-pic-1">
      
      <!-- Twitter Meta Tags -->
      <meta name=" twitter:card" content="summary_large_image">
@@ -23,7 +23,7 @@
      <meta property="twitter:url" content="https://rghvgrv.github.io/AvatarFinder">
      <meta name="twitter:title" content="Avatar Finder">
      <meta name="twitter:description" content="A Avatar Finder Tool">
-     <meta name="twitter:image" content="https://ibb.co/Qcb9nRv" alt="profile-pic-1">
+     <meta name="twitter:image" content="https://i.ibb.co/59MTvyh/Screenshot-2021-09-19-234511.png" alt="profile-pic-1">
 </head>
 
 <body>
